# cerebrum

./: .gitignore  CMakeLists.txt  main.cpp
cerebrum/: Model.cpp  Model.h
cerebrum/data/: Mnist.cpp  Mnist.h
cerebrum/layers/: Conv2D.cpp  Conv2D.h  Dense.cpp  Dense.h  Input.cpp  Input.h  Layer.cpp  Layer.h  ReLU.cpp  ReLU.h  Softmax.cpp  Softmax.h
cerebrum/optimizers/: Optimizer.cpp  Optimizer.h  SGD.cpp  SGD.h
cerebrum/utils/: NetIO.cpp  NetIO.h  TensorOps.cpp  TensorOps.h
